--- a/FactoryMod/config.yml
+++ b/FactoryMod/config.yml
@@ -447,6 +447,7 @@ factories:
         material: DIRT
         amount: 256
         name: Dirt!
+    #blah
     recipes:
      - dirt_to_grass
      - dirt_to_podzol
