--- a/FactoryMod/config.yml
+++ b/FactoryMod/config.yml
@@ -63,7 +63,35 @@ factories:
      - upgrade_to_compactor
      - upgrade_to_printer
      - upgrade_to_concrete
+     - upgrade_to_mill
      - repair_dirt_factory
+  grinding_mill:
+    type: FCC
+    name: Grinding Mill
+    citadelBreakReduction: 1.0
+    setupcost:
+      leather:
+        material: LEATHER
+        amount: 32
+      stone:
+        material: STONE
+        amount: 128
+      log:
+        material: LOG
+        durability: -1
+        amount: 128
+      recipes:
+       - crush_lapis
+       - crush_coal
+       - crush_redstone
+       - crush_stone
+       - crush_cobble
+       - crush_gravel
+       - crush_glowstone
+       - grind_bones
+       - grind_roses
+       - grind_dandelions
+       - repair_grinding_mill
   textile_factory:
     type: FCC
     name: Textile Factory
@@ -724,6 +752,126 @@ factories:
      - repair_mixer
 #RECIPES
 recipes:
+  crush_lapis:
+    production_time: 4s
+    name: Crush Lapis Ore
+    type: PRODUCTION
+    input:
+      lapis_ore:
+        material: LAPIS_ORE
+        amount: 32
+    output:
+      lapis:
+        material: LAPIS_BLOCK
+        amount: 12
+  crush_coal:
+    production_time: 4s
+    name: Crush Coal Ore
+    type: PRODUCTION
+    input:
+      coal_ore:
+        material: COAL_ORE
+        amount: 32
+    output:
+      coal:
+        material: COAL
+        amount: 64
+  crush_redstone:
+    production_time: 4s
+    name: Crush Redstone Ore
+    type: PRODUCTION
+    input:
+      coal_ore:
+        material: REDSTONE_ORE
+        amount: 32
+    output:
+      coal:
+        material: REDSTONE
+        amount: 96
+  crush_stone:
+    production_time: 4s
+    name: Crush Stone
+    type: PRODUCTION
+    input:
+      stone:
+        material: STONE
+        amount: 32
+    output:
+      coal:
+        material: COBBLESTONE
+        amount: 32
+  crush_cobble:
+    production_time: 4s
+    name: Crush Cobblestone
+    type: PRODUCTION
+    input:
+      stone:
+        material: COBBLESTONE
+        amount: 32
+    output:
+      coal:
+        material: GRAVEL
+        amount: 32
+  crush_gravel:
+    production_time: 4s
+    name: Crush Gravel
+    type: PRODUCTION
+    input:
+      stone:
+        material: GRAVEL
+        amount: 32
+    output:
+      coal:
+        material: SAND
+        amount: 32
+  crush_glowstone:
+    production_time: 4s
+    name: Crush Glowstone
+    type: PRODUCTION
+    input:
+      stone:
+        material: GLOWSTONE
+        amount: 32
+    output:
+      coal:
+        material: GLOWSTONE_DUST
+        amount: 128
+  grind_bones:
+    production_time: 4s
+    name: Grind Bones
+    type: PRODUCTION
+    input:
+      stone:
+        material: BONE
+        amount: 32
+    output:
+      coal:
+        material: BONE_MEAL
+        amount: 128
+  grind_roses:
+    production_time: 4s
+    name: Grind Roses
+    type: PRODUCTION
+    input:
+      stone:
+        material: POPPY
+        amount: 64
+    output:
+      coal:
+        material: ROSE_RED
+        amount: 128
+  grind_dandelionss:
+    production_time: 4s
+    name: Grind Dandelions
+    type: PRODUCTION
+    input:
+      stone:
+        material: DANDELION
+        amount: 64
+    output:
+      coal:
+        material: DANDELION_YELLOW
+        amount: 128
   make_string:
     production_time: 4s
     name: Make String
@@ -3156,6 +3304,26 @@ recipes:
         amount: 16
         lore:
           - "Gunpowder Ingredient"
+  repair_grinding_mill:
+    production_time: 4s
+    name: Repair Factory
+    type: REPAIR
+    input:
+      golden_apple:
+        material: GOLDEN_APPLE
+        durability: 1
+        name: Stamina
+        amount: 1
+        lore:
+          - "Prolonged physical"
+          - "or mental effort"
+      stone:
+        material: STONE
+        amount: 128
+      leather:
+        material: LEATHER
+        amount: 16
+    health_gained: 10000
   repair_textile_factory:
     production_time: 4s
     name: Repair Factory
