--- a/FactoryMod/config.yml
+++ b/FactoryMod/config.yml
@@ -64,7 +64,27 @@ factories:
      - upgrade_to_printer
      - upgrade_to_concrete
      - upgrade_to_mill
+     - upgrade_to_kiln
      - repair_dirt_factory
+  kiln:
+    type: FCC
+    name: Kiln
+    citadelBreakReduction: 1.0
+    setupcost:
+      clay:
+        material: HARD_CLAY
+        amount: 384
+    recipes:
+     - sinter_stone
+     - sinter_sandstone
+     - sinter_red_sandstone
+     - make_glass
+     - fire_terracotta
+     - fire_bricks
+     - fire_netherrack
+     - fire_red_netherrack
+     - smelt_bronze_ingots
+     - repair_kiln
   grinding_mill:
     type: FCC
     name: Grinding Mill
@@ -84,6 +104,7 @@ factories:
      - crush_lapis
      - crush_coal
      - crush_redstone
+     - crush_gold_ore
      - crush_stone
      - crush_cobble
      - crush_gravel
@@ -752,6 +773,276 @@ factories:
      - repair_mixer
 #RECIPES
 recipes:
+  sinter_stone:
+    production_time: 4s
+    name: Sinter Cobble Into Stone
+    type: PRODUCTION
+    input:
+      cobble:
+        material: COBBLESTONE
+        amount: 64
+    output:
+      stone:
+        material: STONE
+        amount: 64
+  sinter_stone2:
+    production_time: 4s
+    name: Sinter Cobble Into Stone
+    type: PRODUCTION
+    input:
+      cobble:
+        material: COBBLESTONE
+        amount: 64
+    output:
+      stone:
+        material: STONE
+        amount: 96
+  sinter_stone3:
+    production_time: 4s
+    name: Sinter Cobble Into Stone
+    type: PRODUCTION
+    input:
+      cobble:
+        material: COBBLESTONE
+        amount: 64
+    output:
+      stone:
+        material: STONE
+        amount: 128
+  sinter_sandstone:
+    production_time: 4s
+    name: Sinter Sand Into Sandstone
+    type: PRODUCTION
+    input:
+      sand:
+        material: SAND
+        amount: 64
+    output:
+      sandstone:
+        material: SANDSTONE
+        amount: 32
+  sinter_sandstone2:
+    production_time: 4s
+    name: Sinter Sand Into Sandstone
+    type: PRODUCTION
+    input:
+      sand:
+        material: SAND
+        amount: 64
+    output:
+      sandstone:
+        material: SANDSTONE
+        amount: 48
+  sinter_sandstone3:
+    production_time: 4s
+    name: Sinter Sand Into Sandstone
+    type: PRODUCTION
+    input:
+      sand:
+        material: SAND
+        amount: 64
+    output:
+      sandstone:
+        material: SANDSTONE
+        amount: 64
+  sinter_red_sandstone:
+    production_time: 4s
+    name: Sinter Red Sand Into Sandstone
+    type: PRODUCTION
+    input:
+      sand:
+        material: RED_SAND
+        amount: 64
+    output:
+      sandstone:
+        material: RED_SANDSTONE
+        amount: 32
+  sinter_red_sandstone2:
+    production_time: 4s
+    name: Sinter Red Sand Into Sandstone
+    type: PRODUCTION
+    input:
+      sand:
+        material: RED_SAND
+        amount: 64
+    output:
+      sandstone:
+        material: RED_SANDSTONE
+        amount: 48
+  sinter_red_sandstone3:
+    production_time: 4s
+    name: Sinter Red Sand Into Sandstone
+    type: PRODUCTION
+    input:
+      sand:
+        material: RED_SAND
+        amount: 64
+    output:
+      sandstone:
+        material: RED_SANDSTONE
+        amount: 64
+  make_glass:
+    production_time: 4s
+    name: Make Glass
+    type: PRODUCTION
+    input:
+      sand:
+        material: SAND
+        amount: 64
+    output:
+      glass:
+        material: GLASS
+        amount: 64
+  make_glass2:
+    production_time: 4s
+    name: Make Glass
+    type: PRODUCTION
+    input:
+      sand:
+        material: SAND
+        amount: 64
+    output:
+      glass:
+        material: GLASS
+        amount: 96
+  make_glass3:
+    production_time: 4s
+    name: Make Glass
+    type: PRODUCTION
+    input:
+      sand:
+        material: SAND
+        amount: 64
+    output:
+      glass:
+        material: GLASS
+        amount: 128
+  fire_terracotta:
+    production_time: 4s
+    name: Fire Terracotta Blocks
+    type: PRODUCTION
+    input:
+      clay:
+        material: CLAY
+        amount: 64
+    output:
+      terracotta:
+        material: HARD_CLAY
+        amount: 64
+  fire_terracotta2:
+    production_time: 4s
+    name: Fire Terracotta Blocks
+    type: PRODUCTION
+    input:
+      clay:
+        material: CLAY
+        amount: 64
+    output:
+      terracotta:
+        material: HARD_CLAY
+        amount: 96
+  fire_terracotta3:
+    production_time: 4s
+    name: Fire Terracotta Blocks
+    type: PRODUCTION
+    input:
+      clay:
+        material: CLAY
+        amount: 64
+    output:
+      terracotta:
+        material: HARD_CLAY
+        amount: 128
+  fire_bricks:
+    production_time: 4s
+    name: Fire Bricks
+    type: PRODUCTION
+    input:
+      clay:
+        material: CLAY_BALL
+        amount: 64
+    output:
+      brick:
+        material: BRICK
+        amount: 64
+  fire_bricks2:
+    production_time: 4s
+    name: Fire Bricks
+    type: PRODUCTION
+    input:
+      clay:
+        material: CLAY_BALL
+        amount: 64
+    output:
+      brick:
+        material: BRICK
+        amount: 96
+  fire_bricks3:
+    production_time: 4s
+    name: Fire Bricks
+    type: PRODUCTION
+    input:
+      clay:
+        material: CLAY_BALL
+        amount: 64
+    output:
+      brick:
+        material: BRICK
+        amount: 128
+  fire_netherrack2:
+    production_time: 4s
+    name: Fire Netherrack Bricks
+    type: PRODUCTION
+    input:
+      netherrack:
+        material: NETHERRACK
+        amount: 64
+    output:
+      brick:
+        material: NETHERRACK_BRICK
+        amount: 16
+  fire_netherrack3:
+    production_time: 4s
+    name: Fire Netherrack Bricks
+    type: PRODUCTION
+    input:
+      netherrack:
+        material: NETHERRACK
+        amount: 64
+    output:
+      brick:
+        material: NETHERRACK_BRICK
+        amount: 24
+  fire_red_netherrack2:
+    production_time: 4s
+    name: Fire Red Netherrack Bricks
+    type: PRODUCTION
+    input:
+      netherrack:
+        material: NETHERRACK
+        amount: 64
+      warts
+        material: NETHER_WARTS
+        amount: 16
+    output:
+      brick:
+        material: RED_NETHER_BRICK
+        amount: 4
+  fire_red_netherrack3:
+    production_time: 4s
+    name: Fire Red Netherrack Bricks
+    type: PRODUCTION
+    input:
+      netherrack:
+        material: NETHERRACK
+        amount: 64
+      warts
+        material: NETHER_WARTS
+        amount: 16
+    output:
+      brick:
+        material: RED_NETHER_BRICK
+        amount: 6
   crush_lapis:
     production_time: 4s
     name: Crush Lapis Ore
@@ -794,6 +1085,21 @@ recipes:
       redstone:
         material: REDSTONE
         amount: 96
+      cobblestone:
+        material: COBBLESTONE
+        amount: 20
+  crush_gold_ore:
+    production_time: 4s
+    name: Crush Gold Ore
+    type: PRODUCTION
+    input:
+      gold_ore:
+        material: GOLD_ORE
+        amount: 32
+    output:
+      gold:
+        material: GOLD_INGOT
+        amount: 48
       cobblestone:
         material: COBBLESTONE
         amount: 20
