--- a/Citadel/config.yml
+++ b/Citadel/config.yml
@@ -74,6 +74,7 @@ reinforcements:
   scale_amount: 1
 # grace period is in minutes, forced 100% return within that time if undamaged. Set to 0 to disable (default)
   grace_period: 1
+  name: Bronze Ingot
   lore: An alloy of tin and copper
   effect:
    type: ENCHANTMENT_TABLE
